# HallucinationDetection

./: colab.ipynb  main.py  pyproject.toml
analaysis/: attributions.py  dataset.py
analysis/: Attributions.py  Dataset.py  GeometryAnalyzer.py  SkewnessAnalyzer.py  VisualisationUtils.py
attributions/: analysis.py
config/: prompts.py
core/: ActivationExtractor.py  HallucinationPipeline.py  StorageManager.py
datasets/: BeliefBankDataset.py
eval/: EntailmentEvaluator.py
logical_datasets/: BeliefBankDataset.py  EntailmentBankDataset.py  LogicDataset.py
logical_datasets/data/entailmentbank/: test.jsonl
model/: HallucinationDetection.py  HallucinationDetection_refactored.py  InspectOutputContext.py  LlaMa.py  predict.py  utils.py
prober/: LinearProber.py
probing/: LinearProber.py  ProberEvaluator.py
utils/: InspectOutputContext.py  Utils.py
