[project]
name = "llmsupport"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11, <3.13"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes==0.49.2",
    "dataset>=1.6.2",
    "pandas>=3.0.1",
    "transformers>=5.2.0",
    "wandb>=0.25.0",
    "torch==2.5.1+cu121",
    "torchaudio==2.5.1+cu121",
]

# DICIAMO A UV QUALE INDICE USARE PER QUESTI DUE PACCHETTI
[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }

# DEFINIAMO L'INDICE DI PYTORCH
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true